<resources>
    <string name="app_name">Controle de Gastos</string>
    <string name="rscNovaDespesa">Nova despesa</string>
    <string name="rscConsAdm">Consultar/Gerenciar</string>
    <string name="rscData">Data</string>
    <string name="rscCatPrinc">Categoria Principal</string>
    <string name="rscCatSec">Categoria Secundária</string>
    <string name="rscValor">Valor Gasto</string>
    <string name="rscMsgProblemaInserir">Falha ao gravar no banco</string>
    <string name="rscNomeDatabase">dbcontrolegastos</string>
    <string name="rscMsgValidaData">A data precisa ser informada</string>
    <string name="rscMsgValidaValorGasto">O valor gasto deve ser informado</string>
    <string name="rscMsgValorGastoInvalido">Valor gasto inválido</string>
    <string name="rscColId">ID</string>
    <string name="rscColCatPrinc">Cat. Principal</string>
    <string name="rscColCatSec">Sub Cat</string>
    <string name="rscColDtLanc">Dt Lanç.</string>
    <string name="rscVlGasto">Vl. Gasto</string>
    <string name="rscColVlGasto">Vl. Gasto</string>
    <string name="rscAdmCat">Gerenciar Categorias</string>
    <string name="rscSalvar">Salvar</string>
    <string name="rscMsgInformarCat">Informar Cat. Principal</string>
    <string name="rscMsgInformarCatSec">Informar Cat. Secundária</string>
    <string name="rscMsgCatJaExiste">Categoria já existe</string>
    <string name="rscMsgConfirmaDel">Confirma a eexclusão?</string>
    <string name="msgConfirmaExclusao">Confirma a exclusão:?</string>
    <string name="rscDataDe">De</string>
    <string name="rscDataAte">Até</string>
    <string name="rscSoma">Soma</string>
    <string name="rscMsgCatRemovida">Categoria removida</string>
    <string name="rscMsgCatNaoPermitidos">Não use @ ou - no nome das categorias</string>

</resources>
